Changed package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "ericmaicon/yii2-export",
+  "name": "antwebstudio/yii2-export",
   "description": "Just another yii2 export menu component.",
   "keywords": ["yii", "extension", "export"],
   "homepage": "https://github.com/ericmaicon/yii2-export",
